...
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:gravity="end"
...
                android:textColor="@color/color_green"
                android:textSize="25dp" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:scrollbars="vertical" />

...
