...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_page_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="-31dp" />

...
