...
                app:lottie_rawRes="@raw/heart2" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/cmt_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:gravity="end"
...
